--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-19T04:13:55.210Z",
-        "lastAccessed": "2024-08-19T04:13:55.210Z"
+        "creation": "2024-08-19T10:43:16.206Z",
+        "lastAccessed": "2024-08-19T10:43:16.206Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T04:13:55.210Z",
-        "lastAccessed": "2024-08-19T04:13:55.210Z"
+        "creation": "2024-08-19T10:43:16.206Z",
+        "lastAccessed": "2024-08-19T10:43:16.206Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T04:13:55.210Z",
-        "lastAccessed": "2024-08-19T04:13:55.210Z"
+        "creation": "2024-08-19T10:43:16.206Z",
+        "lastAccessed": "2024-08-19T10:43:16.206Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T04:13:55.210Z",
-        "lastAccessed": "2024-08-19T04:13:55.210Z"
+        "creation": "2024-08-19T10:43:16.206Z",
+        "lastAccessed": "2024-08-19T10:43:16.206Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T04:13:55.210Z",
-        "lastAccessed": "2024-08-19T04:13:55.210Z"
+        "creation": "2024-08-19T10:43:16.206Z",
+        "lastAccessed": "2024-08-19T10:43:16.206Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T04:13:55.210Z",
-        "lastAccessed": "2024-08-19T04:13:55.210Z"
+        "creation": "2024-08-19T10:43:16.206Z",
+        "lastAccessed": "2024-08-19T10:43:16.206Z"
     },
     {
         "key": "dpr",
@@ -59,44 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T04:13:55.210Z",
-        "lastAccessed": "2024-08-19T04:13:55.210Z"
-    },
-    {
-        "key": "wd",
-        "value": "720x1329",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-19T04:13:55.210Z",
-        "lastAccessed": "2024-08-19T04:13:55.210Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61562963472651",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-19T04:13:55.210Z",
-        "lastAccessed": "2024-08-19T04:13:55.210Z"
-    },
-    {
-        "key": "fr",
-        "value": "0AbdJG6jOAE5DAe56.AWVRiNHvTBvt-ujJjEfSsID9_ZM.BmuZOG..AAA.0.0.BmwExo.AWXGNHdfCkU",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-19T04:13:55.210Z",
-        "lastAccessed": "2024-08-19T04:13:55.210Z"
-    },
-    {
-        "key": "xs",
-        "value": "29%3AyBAya3JUzZiYSA%3A2%3A1723878505%3A-1%3A14749",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-19T04:13:55.210Z",
-        "lastAccessed": "2024-08-19T04:13:55.210Z"
+        "creation": "2024-08-19T10:43:16.206Z",
+        "lastAccessed": "2024-08-19T10:43:16.206Z"
     },
     {
         "key": "locale",
@@ -104,25 +68,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T04:13:55.210Z",
-        "lastAccessed": "2024-08-19T04:13:55.210Z"
+        "creation": "2024-08-19T10:43:16.206Z",
+        "lastAccessed": "2024-08-19T10:43:16.206Z"
     },
     {
-        "key": "fbl_st",
-        "value": "100721852%3BT%3A28734013",
+        "key": "m_pixel_ratio",
+        "value": "1.500488042831421",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T04:13:55.210Z",
-        "lastAccessed": "2024-08-19T04:13:55.210Z"
+        "creation": "2024-08-19T10:43:16.206Z",
+        "lastAccessed": "2024-08-19T10:43:16.206Z"
+    },
+    {
+        "key": "wd",
+        "value": "720x1329",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-19T10:43:16.206Z",
+        "lastAccessed": "2024-08-19T10:43:16.206Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61562963472651",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-19T10:43:16.206Z",
+        "lastAccessed": "2024-08-19T10:43:16.206Z"
+    },
+    {
+        "key": "fr",
+        "value": "0AbdJG6jOAE5DAe56.AWUmyeDzAq-maz7e8vbR-aAVqKk.BmuZOG..AAA.0.0.BmwyF7.AWX6rrLeprg",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-19T10:43:16.206Z",
+        "lastAccessed": "2024-08-19T10:43:16.206Z"
+    },
+    {
+        "key": "xs",
+        "value": "13%3AIAi-J4JIPqCcRw%3A2%3A1724064123%3A-1%3A14749",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-19T10:43:16.206Z",
+        "lastAccessed": "2024-08-19T10:43:16.206Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2597%3Btimestamp%3A1724040822",
+        "value": "v2%3Bclient_version%3A2597%3Btimestamp%3A1724064154",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T04:13:55.210Z",
-        "lastAccessed": "2024-08-19T04:13:55.210Z"
+        "creation": "2024-08-19T10:43:16.206Z",
+        "lastAccessed": "2024-08-19T10:43:16.207Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101332441%3BT%3A28734402",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-19T10:43:16.207Z",
+        "lastAccessed": "2024-08-19T10:43:16.207Z"
     }
 ]
