--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.206Z",
-        "lastAccessed": "2024-08-19T10:43:16.206Z"
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.206Z",
-        "lastAccessed": "2024-08-19T10:43:16.206Z"
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.206Z",
-        "lastAccessed": "2024-08-19T10:43:16.206Z"
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.206Z",
-        "lastAccessed": "2024-08-19T10:43:16.206Z"
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.206Z",
-        "lastAccessed": "2024-08-19T10:43:16.206Z"
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.206Z",
-        "lastAccessed": "2024-08-19T10:43:16.206Z"
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
     },
     {
         "key": "dpr",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.206Z",
-        "lastAccessed": "2024-08-19T10:43:16.206Z"
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.206Z",
-        "lastAccessed": "2024-08-19T10:43:16.206Z"
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.206Z",
-        "lastAccessed": "2024-08-19T10:43:16.206Z"
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
     },
     {
         "key": "wd",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.206Z",
-        "lastAccessed": "2024-08-19T10:43:16.206Z"
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
     },
     {
         "key": "c_user",
@@ -95,43 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.206Z",
-        "lastAccessed": "2024-08-19T10:43:16.206Z"
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
     },
     {
         "key": "fr",
-        "value": "0AbdJG6jOAE5DAe56.AWUmyeDzAq-maz7e8vbR-aAVqKk.BmuZOG..AAA.0.0.BmwyF7.AWX6rrLeprg",
+        "value": "0AbdJG6jOAE5DAe56.AWWI6lgTvgi1y-ylwtI5E5yUAwo.BmuZOG..AAA.0.0.BmwyVl.AWWBupTohWE",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.206Z",
-        "lastAccessed": "2024-08-19T10:43:16.206Z"
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
     },
     {
         "key": "xs",
-        "value": "13%3AIAi-J4JIPqCcRw%3A2%3A1724064123%3A-1%3A14749",
+        "value": "44%3A-Tb_K9xr5QsZVQ%3A2%3A1724065125%3A-1%3A14749",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.206Z",
-        "lastAccessed": "2024-08-19T10:43:16.206Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2597%3Btimestamp%3A1724064154",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.206Z",
-        "lastAccessed": "2024-08-19T10:43:16.207Z"
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
     },
     {
         "key": "fbl_st",
-        "value": "101332441%3BT%3A28734402",
+        "value": "101322317%3BT%3A28734418",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T10:43:16.207Z",
-        "lastAccessed": "2024-08-19T10:43:16.207Z"
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2597%3Btimestamp%3A1724065129",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-19T10:59:23.729Z",
+        "lastAccessed": "2024-08-19T10:59:23.729Z"
     }
 ]
