--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
     },
     {
         "key": "dpr",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
     },
     {
         "key": "wd",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
     },
     {
         "key": "c_user",
@@ -95,43 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
     },
     {
         "key": "fr",
-        "value": "0AbdJG6jOAE5DAe56.AWWdKdxYfzwKfBQ-89v_m92Ufyw.BmuZOG..AAA.0.0.Bmwyf5.AWUfn99Jzrw",
+        "value": "0AbdJG6jOAE5DAe56.AWWId79hePTyt5Ef8mDm0tJlISc.BmuZOG..AAA.0.0.Bmwyjf.AWXSEyQnN9E",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
     },
     {
         "key": "xs",
-        "value": "20%3ADf1NMt7KUXQ55A%3A2%3A1724065786%3A-1%3A14749",
+        "value": "13%3AHyIeVbWCr834VQ%3A2%3A1724066016%3A-1%3A14749",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101039179%3BT%3A28734429",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2597%3Btimestamp%3A1724065789",
+        "value": "v2%3Bclient_version%3A2597%3Btimestamp%3A1724066018",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-19T11:09:58.658Z",
-        "lastAccessed": "2024-08-19T11:09:58.658Z"
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101331314%3BT%3A28734433",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-19T11:13:48.239Z",
+        "lastAccessed": "2024-08-19T11:13:48.239Z"
     }
 ]
